# bgchof

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AWS_DEPLOYMENT_PLAN.md  DEPLOYMENT_AUTOMATION_README.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUMMARY.md  Dockerfile  Dockerfile.lambda  GITHUB_WORKFLOW_STRATEGY.md  LAMBDA_REBUILD_STRATEGY.md  QUICK_START_GUIDE.md  README.md  SECURITY_REVIEW.md  coverage.xml  deploy_lambda.sh  event.json  pyproject.toml  requirements.lambda.txt  requirements.txt  setup.py  test-docker.sh  test_results.txt  tox.ini
.github/workflows/: docker-integration-tests.yml  pyest.yml  python-tests.yml
api/: api.py
docs/: LAMBDA_DEPLOYMENT.md  MODERNIZATION_PROGRESS.md  Modules.md  PYTHON_3.14_MODERNIZATION.md  TEST_REPORT.md
internal-monologue/: 2026-05-24_github-workflow-modernization.md
scripts/: deploy_lambda.py
src/: bgchof.py  bgchof_settings.py  calculateEasterSunday.py  fasting_io.py  fasting_status.py  generateCalendar.py
src/bgchof.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: README_DOCKER_TESTS.md  context.py  test_bgchof.py  test_bgchof_sourcery.py  test_cache_clearing.py  test_calc_easter.py  test_deploy_lambda.py  test_docker_integration.py  test_fasting_status.py  test_generate_calendar.py  test_pytest.py
